# tEngine_vulkan

./: .gitignore  CMakeLists.txt  CompileRefl.bat  ReadMe.md  multi-compile.py
AssetsCode/Shader/: Axis.fsh  Axis.vsh  CameraDesc.vsh  DownSample.fsh  DownSample.vsh  MainTex.fsh  MedianFilter.fsh  Pcss.fsh  Quad.vsh  ShadowPass.fsh  ShadowPass.vsh  ToonMapping.fsh  ToonMapping.vsh  UpSample.fsh  UpSample.vsh  blingPhong.fsh  draw.fsh  draw.vsh  drawTexture.fsh  drawVertexColor.fsh
AssetsCode/Shader/Include/: Filter.h  Global.h  Noise.h  VertexAttribute.h  VertexDescriptor.h
Source/: CMakeLists.txt  Camera.cpp  CommandBufferBase.cpp  Core.cpp  DefaultRenderPass.cpp  Logger.cpp  MeshBuffer.cpp  MeshBuffer.h  Pipeline.h  PipelineState.h  PriorityAllocator.h  Reflector.cpp  Tgine.cpp  Tgine.h  example.cpp  render_pass.cpp  tAsset.cpp  tAssetLoadManager.cpp  tDescriptorPool.cpp  tDevice.cpp  tEngineContext.cpp  tEngineFunctional.h  tFenceSemaphore.cpp  tFenceSemaphore.h  tFormatInterface.cpp  tFrameBuffer.cpp  tPipeline.cpp  tRenderGraph.cpp  tResource.cpp  tShader.cpp  tTextureFormatLayout.cpp  tVMA_Allocation.cpp  utils.cpp
Source/TComponent/: Camera.cpp  Camera.h  ComponentFactory.h  EngineContext.cpp  EngineContext.h  GameObject.cpp  GameObject.h  Light.cpp  Light.h  MeshBuffer.h  Scene.h  bufferHelper.cpp  bufferHelper.h  example.cpp  tComponent.cpp  tComponent.h  tTransform.h
Source/TGine/: Asset.cpp  AssetLoadManager.cpp  AssetLoadManager.h  Buffer.h  CommandBufferBase.cpp  CommandBufferBase.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorShared.h  Device.cpp  Device.h  EgTypes.h  EngineContext.cpp  EngineContext.h  FrameBuffer.cpp  FrameBuffer.h  Image.h  Log.h  Logger.cpp  MeshBuffer.cpp  MeshBuffer.h  Pipeline.cpp  Pipeline.h  PriorityAllocator.h  Queue.cpp  Reflector.cpp  Reflector.h  Resource.cpp  ResourceCreateInfo.h  Shader.cpp  Shader.h  ShaderInterface.h  ShaderVariable.h  SimpleGeometry.h  SwapChain.cpp  SwapChain.h  TextureFormatLayout.h  Tgine.cpp  Tgine.h  renderHelper.cpp  (+36 more)
Source/include/: Camera.h  CommandBufferBase.h  Core.h  Reflector.h  SimpleGeometry.h  render_pass.hpp  tAllocation.h  tAsset.h  tAssetLoadManager.h  tCommandBufferInterface.h  tDescriptorPool.h  tDevice.h  tEngineContext.h  tEngineFunctional.h  tFormatInterfacce.h  tFrameBuffer.h  tMaterial.h  tMemoryBarrier.h  tPipeline.h  tRenderGraph.h  tResource.h  tShader.h  tTextureFormatLayout.h  utils.hpp
example/AABB/: CMakelists.txt  example.cpp
example/FlightSims/: CMakelists.txt  FlightSims.h  main.cpp
example/MassSpring/: CMakelists.txt  MassSpring.cpp  MassSpring.h  main.cpp
example/PCSS/: CMakelists.txt  example.cpp
example/ParticlePhysicsDemo/: CMakelists.txt  main.cpp  platform.h
example/TexturedObj/: CMakelists.txt  example.cpp
include/tComponent/: Camera.h  CollectShadowPass.h  Component.h  ComponentData.h  EngineContext.h  GameObject.h  Light.h  Material.h  MeshBuffer.h  Noise.h  RenderLayers.h  RenderWorld.h  World.h  ecs.h  renderer.h  tTransform.h
include/tEngine/: Buffer.h  CommandBufferBase.h  DescriptorShared.h  FrameBuffer.h  GpuBlock.h  GraphicsState.h  Log.h  MemoryBarrier.h  RingPool.h  Shader.h  ShaderInterface.h  SimpleGeometry.h  renderHelper.h  vmaAllocation.h
include/tPhysics/: AABB.h  RigidBody.h  ccd.h  collide.h  contacts.h  joints.h  numerical.h  pContacts.h  pForceGen.h  pLinks.h  pWorld.h  physicsCore.h  tCCD.h  tParticles.h
src/: CMakeLists.txt
src/TComponent/: Camera.cpp  Component.cpp  EngineContext.cpp  GameObject.cpp  Light.cpp  Material.cpp  MeshBuffer.cpp  Nosie.cpp  World.cpp  collectShadowPass.cpp  ecs.cpp  renderer.cpp
src/TGine/: AssetLoadManager.cpp  CommandBufferBase.cpp  DescriptorPool.cpp  FenceSemaphore.cpp  Logger.cpp  Pipeline.cpp  Reflector.cpp  Resource.cpp  Shader.cpp  SwapChain.cpp  TextureFormatLayout.cpp  VMA_Allocation.cpp  renderHelper.cpp
src/TPhysics/: AABB.cpp  RigidBody.cpp  ccd.cpp  collide.cpp  collider.cpp  contacts.cpp  core.cpp  gjkCollide.cpp  pContacts.cpp  pForceGen.cpp  pLinks.cpp  pWorld.cpp  tParticle.cpp
